Lease Package/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>