Lease Package/main/default/objects/Reservation__c/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Flat</label>
    <referenceTo>Flat__c</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>Reservation</relationshipName>
    <type>Lookup</type>
</CustomField>