Lease Package/main/default/objects/Reservation__c/fields/Remaining_days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_days__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Remaining days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>