Lease Package/main/default/objects/Reservation__c/listViews/Reservation.listView-meta.xml
<ListView>
    <fullName>Reservation</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Reservation</label>
</ListView>