Lease Package/main/default/objects/Reservation__c/listViews/Reservations.listView-meta.xml
<ListView>
    <fullName>Reservations</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Remaining_days__c</columns>
    <filterScope>Mine</filterScope>
    <label>Reservations</label>
</ListView>