Lease Package/main/default/objects/Reservation__c/listViews/Reserve.listView-meta.xml
<ListView>
    <fullName>Reserve</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Reserve</label>
</ListView>