Lease Package/main/default/objects/Reservation__c/listViews/reserved.listView-meta.xml
<ListView>
    <fullName>reserved</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>reserved</label>
</ListView>